# data-plane-shared-libraries

./: .bazelrc  .pre-commit-config.yaml  BUILD.bazel
scp/cc/aws/proxy/src/: proxify.cc
scp/cc/azure/: BUILD.bazel
scp/cc/azure/attestation/: BUILD  BUILD.bazel  json_attestation_report.cc  json_attestation_report.h  print_snp_json.cc  readme.md  security_context_fetcher.cc  security_context_fetcher.h
scp/cc/azure/attestation/get-snp-report/: get-snp-report.c  get-snp-report.h
scp/cc/azure/attestation/src/: BUILD.bazel  attestation.h  endorsed_tcb.cc  endorsements.cc  evidence.cc  fake_report.cc  has_snp.cc  print_report.cc  report.cc  report.h  sev.h  sev_guest.h  snp.cc  uvm_endorsements.cc
scp/cc/azure/attestation/src/utils/: BUILD.bazel  hex.cc  hex.h  host_amd_certs.cc  host_amd_certs.h  security_context.cc  security_context.h
scp/cc/azure/attestation/test/: attestation_test.cc
scp/cc/public/cpio/interface/: BUILD.bazel
src/azure/attestation/: BUILD.bazel
src/azure/attestation/src/: BUILD.bazel  dpwrapper.cc  dpwrapper.h
src/azure/encrypt_payload/: BUILD.bazel  encrypt_payload.cc
src/azure/fetch_auth_token/: BUILD.bazel  fetch_auth_token.cc
src/cpio/client_providers/auth_token_provider/azure/: azure_auth_token_provider.cc  azure_auth_token_provider_test.cc
src/cpio/client_providers/global_cpio/: BUILD.bazel
src/cpio/client_providers/instance_client_provider/azure/: BUILD.bazel
src/cpio/client_providers/private_key_client_provider/: private_key_client_provider.cc
src/cpp/telemetry/: BUILD.bazel
src/telemetry/: BUILD.bazel
(+63 files in other folders)
