# Portions Copyright (c) Microsoft Corporation
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "attestation",
    srcs = [
        "report.cc",
        "fake_report.cc",
        "has_snp.cc",
        "evidence.cc",
        "endorsements.cc",
        "uvm_endorsements.cc",
        "endorsed_tcb.cc",
    ],
    hdrs = [
        "attestation.h",
    ],
    deps = [
        "//scp/cc/core/utils/src:core_utils",
        "//scp/cc/azure/attestation:utils",
        "@nlohmann_json//:lib",
    ],
)

cc_binary(
    name = "print_report",
    srcs = ["print_report.cc"],
    deps = [
        "attestation",
    ],
)
